# TTNN

./: .gitignore  TTNN.spec  agent.py  app.py  entitlements.plist  interview.py  list_devices.py  meeting.py  pyproject.toml  test_dual_asr.py  test_loopback.py  ui.html
.github/workflows/: build.yml
rthooks/: rthook_pywebview.py
