[project]
name = "ttnn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.109.2",
    "dotenv>=0.9.9",
    "numpy>=2.4.6",
    "python-dotenv>=1.2.2",
    "sounddevice>=0.5.5",
    "tencentcloud-sdk-python>=3.1.116",
    "websocket-client>=1.9.0",
]
